<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.CreateNotesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/priority"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/green_priority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/green_priority"
                android:src="@drawable/ic_done" />

            <ImageView
                android:id="@+id/yellow_priority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/yellow_priority" />

            <ImageView
                android:id="@+id/red_priority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/red_priority" />

        </LinearLayout>

        <EditText
            android:id="@+id/notes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/nunito_sans"
            android:hint="@string/edit_text_title"
            android:padding="15dp" />

        <EditText
            android:id="@+id/notes_description"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/nunito_sans"
            android:gravity="start"
            android:hint="@string/edit_text_description"
            android:padding="15dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/backgroundAddButton"
        android:contentDescription="@string/add_note_button"
        android:src="@drawable/ic_save"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>