<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="8dp"
            android:padding="2dp"
            android:src="@drawable/ic_filter_list"
            android:background="@drawable/bg_icon_app_bar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="High"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        tools:listitem="@layout/item_note"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_filter"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/create_note_image"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:contentDescription="@string/create_note_image_description"
        android:src="@drawable/create_first_note"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_note_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/create_note"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_note_image" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/backgroundAddButton"
        android:src="@drawable/ic_add"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_note_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>